<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".activities.ClientInfo">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="48dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_above="@+id/bottom_ll"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:id="@+id/tv_client_name"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:fontFamily="@font/sspbold"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/shipping_address"
                        android:textSize="18sp"
                        android:fontFamily="@font/sspsemibold"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/sspregular"
                        android:id="@+id/tv_client_shipping_address"
                        android:textColor="@color/text_color"
                        android:layout_height="wrap_content"/>

                    <!--            <androidx.appcompat.widget.AppCompatTextView-->
                    <!--                android:layout_width="match_parent"-->
                    <!--                android:text="Service"-->
                    <!--                android:textSize="16sp"-->
                    <!--                android:layout_marginTop="24dp"-->
                    <!--                android:textColor="@color/colorPrimary"-->
                    <!--                android:layout_height="wrap_content"/>-->

                    <!--            <androidx.appcompat.widget.AppCompatTextView-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_marginTop="6dp"-->
                    <!--                android:id="@+id/tv_service"-->
                    <!--                android:text="$695 - Rush Full Legalization (7-14 business days)"-->
                    <!--                android:textColor="@color/processing"-->
                    <!--                android:layout_height="wrap_content"/>-->

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/documents_type"
                        android:textSize="18sp"
                        android:fontFamily="@font/sspsemibold"
                        android:layout_marginTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content"/>


                    <com.apptomate.notary.utils.MyListView
                        android:layout_marginTop="6dp"
                        android:id="@+id/lv_documents1"
                        android:dividerHeight="6dp"
                        android:divider="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/file_list"
                        android:textSize="18sp"
                        android:fontFamily="@font/sspsemibold"
                        android:layout_marginTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content"/>


                    <com.apptomate.notary.utils.MyListView
                        android:layout_marginTop="6dp"
                        android:id="@+id/lv_documents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>





                </LinearLayout>
            </androidx.core.widget.NestedScrollView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/bottom_ll"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:text="Assign"
                    android:gravity="center"
                    android:background="@drawable/request_drawable"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="12dp"
                    android:id="@+id/tv_assign_"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/white"
                    android:layout_height="35dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_iv_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/edit"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:onClick="edit"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>